# rpc-client-server

./: #CMakeLists.txt#  .gitignore  .gitmodules  CMakeLists.txt  JsonParser.cpp  JsonParser.h  README.md  Server.cpp  Server.h  ServerMKO.cpp  ServerMKO.h  main.cpp  main.qml  package.json  test_client.cpp  test_rpc.grpc.pb.cc  test_rpc.grpc.pb.h  test_rpc.pb.cc  test_rpc.pb.h  test_rpc_db.json  test_server.cpp
3rdPart/include/QtProtobufGrpc/: QAbstractGrpcChannel  QGrpcAsyncReply  QGrpcInsecureCredentials  QGrpcStatus  QGrpcSubscription  QGrpcUserPasswordCredentials
3rdPart/include/QtProtobufProtobuf/: QAbstractProtobufSerializer  QProtobufJsonSerializer  QProtobufLazyMessagePointer  QProtobufMetaObject  QProtobufMetaProperty  QProtobufSelfcheckIterator  QQmlListPropertyConstructor  QtCore.qpb.h  QtProtobufQtTypes  QtProtobufTypes
3rdPart/include/QtProtobufProtobuf/google/protobuf/: api.qpb.h  duration.qpb.h  empty.qpb.h  source_context.qpb.h  struct.qpb.h  timestamp.qpb.h  wrappers.qpb.h
3rdPart/lib/cmake/QtProtobuf/: QtProtobufConfig.cmake  QtProtobufGrpcTargets.cmake  QtProtobufProtobufQtTypesTargets-noconfig.cmake  QtProtobufProtobufWellKnownTypesTargets.cmake  QtProtobufqtprotobufgenConfig.cmake  QtProtobufqtprotobufgenTargets-noconfig.cmake  grpcquickpluginTargets.cmake
Client/: CMakeLists.txt  ClientMKO.cpp  ClientMKO.h  OperatorView.qml  OperatorsListModel.cpp  OperatorsListModel.h  OperatorsListModelBase.cpp  OperatorsListModelBase.h  main.cpp  main.qml  main_window.qml  qml.qrc  rpc_mko.proto
Libraries/MikroJson/lib/cmake/microjson/: microjsonConfig.cmake  microjsonTargets-noconfig.cmake  microjsonTargets.cmake
Libraries/qtprotobuf/include/QtProtobufGrpc/: QAbstractGrpcClient  QGrpcCredentials  QGrpcHttp2Channel  QGrpcSslCredentials
Libraries/qtprotobuf/include/QtProtobufProtobuf/: QProtobufObject  QProtobufSerializationPluginInterface  QProtobufSerializer  QtGui.qpb.h
Libraries/qtprotobuf/include/QtProtobufProtobuf/google/protobuf/: any.qpb.h  field_mask.qpb.h  type.qpb.h
Libraries/qtprotobuf/lib/cmake/QtProtobuf/: QtProtobufGrpcConfig.cmake  QtProtobufGrpcTargets-noconfig.cmake  QtProtobufProtobufConfig.cmake  QtProtobufProtobufQtTypesConfig.cmake  QtProtobufProtobufQtTypesTargets.cmake  QtProtobufProtobufTargets-noconfig.cmake  QtProtobufProtobufTargets.cmake  QtProtobufProtobufWellKnownTypesConfig.cmake  QtProtobufProtobufWellKnownTypesTargets-noconfig.cmake  QtProtobufqtprotobufgenTargets.cmake  grpcquickpluginTargets-noconfig.cmake  protobufquickpluginTargets-noconfig.cmake  protobufquickpluginTargets.cmake
Server/: CMakeLists.txt  JsonParser.cpp  Server.cpp  Server.h  helper.cpp  helper.h  main.cpp  resources.qrc  test_rpc_db.json
Test/: CMakeLists.txt  ClientMKO.cpp  ClientMKO.h  ServerMKO.cpp  ServerMKO.h  main.cpp  main.qml  test_rpc.proto
TestQml/: CMakeLists.txt  CMakeLists.txt.autosave  ServerMKO.cpp  main.cpp  main.qml
cmake/: common.cmake
design-patterns-gpt/: command_patterns.cpp
protos/: server.proto  test_rpc.proto
